--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
@@ -72,6 +72,13 @@ h2{
     white-space: pre-line;
 }
 
+.remove-button-link{
+    font-size: 14px;
+}
+
+.use-location-button-link{
+    font-size: 14px;
+}
 
 // Dashboard 
 
