--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/Locations.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/Locations.cshtml
@@ -26,11 +26,11 @@
                 <button type="submit" class="button" name="AddLocations" value="SearchLocations">Find address</button>
             </div>
 
-            @if (Model.SearchResultAddresses.Page != null && Model.SearchResultAddresses.Page.Any())
+            @if (Model.SearchResultAddresses != null && Model.SearchResultAddresses.Page != null && Model.SearchResultAddresses.Page.Any())
             {
                 <div class="form-group">
                     <div class="tabbed-element tab1 active width-all-1-1">
-                        <table class="no-btm-margin">
+                        <table class="no-btm-margin grid-3-4">
                             <colgroup>
                                 <col class="t50">
                                 <col class="t20">
@@ -44,12 +44,17 @@
                                 <tr>
                                     <td>
                                         @string.Format("{0}, {1}, {2}", address.Address.Postcode, address.Address.AddressLine1, address.Address.AddressLine4)
+                                        @*@Html.HiddenFor(m => Model.SearchResultAddresses.Page.ToList()[index].Address.Postcode, new { @id = "searchAddresses" + index + "address__Postcode", Name = "SearchAddresses[" + index + "].Address.Postcode" })
+                                        @Html.HiddenFor(m => Model.SearchResultAddresses.Page.ToList()[index].Address.AddressLine1, new { @id = "searchAddresses_" + index + "address__AddressLine1", Name = "SearchAddresses[" + index + "].Address.AddressLine1" })
+                                        @Html.HiddenFor(m => Model.SearchResultAddresses.Page.ToList()[index].Address.AddressLine2, new { @id = "searchAddresses_" + index + "address__AddressLine2", Name = "SearchAddresses[" + index + "].Address.AddressLine2" })
+                                        @Html.HiddenFor(m => Model.SearchResultAddresses.Page.ToList()[index].Address.AddressLine3, new { @id = "searchAddresses_" + index + "address__AddressLine3", Name = "SearchAddresses[" + index + "].Address.AddressLine3" })
+                                        @Html.HiddenFor(m => Model.SearchResultAddresses.Page.ToList()[index].Address.AddressLine4, new { @id = "searchAddresses_" + index + "address__AddressLine4", Name = "SearchAddresses[" + index + "].Address.AddressLine4" })*@
                                     </td>
                                     <td>
                                         @{
                                             var buttonName = "UseLocation-" + @index;
                                         }
-                                        <button id="useLocation" type="submit" class="button-link" name="AddLocations" value="@buttonName">Use location</button>
+                                        <button id="useLocation" type="submit" class="button-link use-location-button-link" name="AddLocations" value="@buttonName">Use location</button>
                                     </td>
                                 </tr>
                                 index = index+1;
@@ -70,7 +75,7 @@
 
                     <button name="AddLocations" value="SearchLocations-@previousPage"
                        style="visibility: @(currentPage == 1 ? "hidden" : "visible"); width: 50%"
-                       class="page-navigation__btn previous grid grid-1-3">
+                       class="button-link page-navigation__btn previous grid grid-1-3">
                         <i class="arrow-button fa fa-angle-left"></i>
                         <span class="description">Previous <span class="hide-mob">page</span></span>
                         <span class="counter">@(currentPage - 1) of @totalNumberOfPages</span>
@@ -78,7 +83,7 @@
 
                     <button name="AddLocations" value="SearchLocations-@nextPage"
                        style="visibility: @(currentPage == totalNumberOfPages ? "hidden" : "visible"); width: 50%"
-                       class="page-navigation__btn next grid grid-1-3">
+                       class="button-link page-navigation__btn next grid grid-1-3">
                         <i class="arrow-button fa fa-angle-right"></i>
                         <span class="description">Next <span class="hide-mob">page</span></span>
                         <span class="counter">@(currentPage + 1) of @totalNumberOfPages</span>
@@ -91,7 +96,7 @@
             {
                 <div class="form-group">
                     <div class="tabbed-element tab1 active width-all-1-1">
-                        <table class="no-btm-margin">
+                        <table class="no-btm-margin grid-3-4">
                             <colgroup>
                                 <col class="t50">
                                 <col class="t30">
@@ -123,13 +128,13 @@
                                         @Html.HiddenFor(m => Model.Addresses.ToList()[i].Address.AddressLine4, new {@id = "addresses_" + i + "address__AddressLine4", Name = "Addresses[" + i + "].Address.AddressLine4"})
                                     </td>
                                     <td>
-                                        @Html.TextBoxFor(m => Model.Addresses.ToList()[i].NumberOfPositions, new {@id = "addresses_" + i + "__numberofpositions", Name = "Addresses[" + i + "].NumberOfPositions"})
+                                        @Html.TextBoxFor(m => Model.Addresses.ToList()[i].NumberOfPositions, new {@class="form-control-small", @id = "addresses_" + i + "__numberofpositions", Name = "Addresses[" + i + "].NumberOfPositions"})
                                     </td>
-                                    <td>
+                                    <td class="ta-center">
                                         @{
                                             var buttonName = "RemoveLocation-" + i;
                                         }
-                                        <button id="removeLocation" type="submit" class="button-link" name="AddLocations" value="@buttonName">Remove</button>
+                                        <button id="removeLocation" type="submit" class="button-link remove-button-link" name="AddLocations" value="@buttonName">Remove</button>
                                     </td>
                                 </tr>
                             }
