--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
@@ -172,23 +172,26 @@
             <table class="vert-top" id="applicationTable">
                 <colgroup>
                     <col class="t30">
-                    <col class="t30">
-                    <col class="t20">
-                    <col class="t20">
+                    <col class="t25">
+                    <col class="t15">
+                    <col class="t15">
+                    <col class="t15">
                 </colgroup>
                 <thead>
                 <tr>
                     <th>
-                        <a class="font-black">Applicant name</a>
+                        <span class="font-black">Applicant name</span>
                     </th>
                     <th>
-                        <a class="font-black">Vacancy manager notes</a>
+                        <span class="font-black">Vacancy manager notes</span>
                     </th>
                     <th>
-                        <a class="font-black">Submitted</a>
+                        <span class="font-black">Submitted</span>
                     </th>
                     <th>
-                        <a class="font-black">Status</a>
+                        <span class="font-black">Status</span>
+                    </th>
+                    <th>
                     </th>
                 </tr>
                 </thead>
@@ -197,9 +200,7 @@
                 {
                     <tr class="applicant">
                         <td>
-                            <h4 class="applicant-name">
-                                <a href="@Url.RouteUrl(RecruitmentRouteNames.ReviewApprenticeshipApplication, new ApplicationSelectionViewModel(Model.VacancyApplicationsSearch, applicationSummary.ApplicationId))" title="View @applicationSummary.ApplicantName application">@applicationSummary.ApplicantName</a>
-                            </h4>
+                            <h4 class="applicant-name">@applicationSummary.ApplicantName</h4>
                         </td>
                         <td>
                             @{
@@ -214,6 +215,9 @@
                         <td>@Html.DisplayFor(m => applicationSummary.DateApplied)</td>
                         <td>
                             @Html.Partial("_applicationStatus", applicationSummary.Status)
+                        </td>
+                        <td>
+                            <a href="@Url.RouteUrl(RecruitmentRouteNames.ReviewApprenticeshipApplication, new ApplicationSelectionViewModel(Model.VacancyApplicationsSearch, applicationSummary.ApplicationId))" title="View @applicationSummary.ApplicantName application">View application</a>
                         </td>
                     </tr>
                 }
