--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySummary.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySummary.cshtml
@@ -29,7 +29,7 @@
     @Html.HiddenFor(m => m.VacancyReferenceNumber)
     @Html.HiddenFor(m => m.Status)
     @Html.HiddenFor(m => m.WarningsHash)
-
+    @Html.HiddenFor(m => m.ComeFromPreview)
     <section>
         <div class="form-group">
             <fieldset class="form-group inline-fixed">
