--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
@@ -12,6 +12,10 @@
 	display: none;
 }
 
+.cancel-link{
+    margin-left: 12px;
+}
+
 .locations-table {
     .location-positions {
         text-align: center;
