--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
@@ -171,6 +171,10 @@
     <div class="form-group">
         <button id="createVacancyButton" type="submit" class="button" name="CreateVacancy" value="@saveButtonValue">@saveButtonText</button>
         <button id="createVacancyAndExit" type="submit" class="button-link" name="CreateVacancy" value="CreateVacancyAndExit">Save and exit</button>
+        @if (Model.ComeFromPreview)
+        {
+            @Html.RouteLink("Cancel", RecruitmentRouteNames.PreviewVacancy, new { vacancyReferenceNumber = Model.VacancyReferenceNumber })
+        }
     </div>
 }
 
