--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_apprenticeshipLocationSelectorNonJS.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_apprenticeshipLocationSelectorNonJS.cshtml
@@ -2,21 +2,32 @@
 
 <noscript>
     <div class="blocklabel-single-container">
-        <div>
-            <div class="form-group inline clearfix blocklabel-single">
-                <a name="@Html.NameFor(m => m.IsEmployerLocationMainApprenticeshipLocation).ToString().ToLower()"></a>
-                <h4 class="bold-small">Is this address the vacancy location?</h4>
+        <div class="form-group inline clearfix blocklabel-single">
+            <a name="@Html.NameFor(m => m.IsEmployerLocationMainApprenticeshipLocation).ToString().ToLower()"></a>
+            <h4 class="bold-small">Is this address the vacancy location?</h4>
 
-                <button type="submit" class="button" name="ConfirmEmployer" value="SetDifferentLocation">No, I need to add a different location</button>
-                <button type="submit" class="button" name="ConfirmEmployer" value="SetEmployersLocationAsMainLocation">Yes, this will be the vacancy location</button>
+            <label data-target="location-type-main-location-panel" for="location-type-main-location" class="block-label @Model.IsEmployerLocationMainApprenticeshipLocation ">
+                @Html.RadioButtonFor(m => m.IsEmployerLocationMainApprenticeshipLocation, true, new { id = "location-type-main-location", aria_controls = "location-type-main-location-panel" })
+                Yes, this will be the vacancy location
+            </label>
+            <label data-target="location-type-different-location-panel" for="location-type-different-location" class="block-label @Model.IsEmployerLocationMainApprenticeshipLocation ">
+                @Html.RadioButtonFor(m => m.IsEmployerLocationMainApprenticeshipLocation, false, new { id = "location-type-different-location", aria_controls = "location-type-different-location-panel" })
+                No, I need to add a different location
+            </label>
+        </div>
+        <div id="location-type-main-location-panel" class="toggle-content blocklabel-content location">
+            @{
+                var className = "form-group";
+                if (ViewData.ModelState.Keys.Contains("NumberOfPositions"))
+                {
+                    className += " input-validation-error";
+                }
+            }
+            <div class="@className">
+                <div>If this is the main location how many positions?</div>
+                <input name="NumberOfPositions" class="form-control-small form-control" id="NumberOfPositions" maxlength="5" size="12" type="text">
+                @Html.ValidationMessage("NumberOfPositions")
             </div>
         </div>
-
-        @if (Model.ShowNumberOfPositions)
-        {
-            <div id="location-type-main-location-panel" class="toggle-content blocklabel-content">
-                @Html.FormTextFor(model => model.NumberOfPositions, controlHtmlAttributes: new { type = "text", @class = "form-control-small", @maxlength = "5", size = 12 }, labelHtmlAttributes: new { @class = "bold-small" })
-            </div>
-        }
     </div>
 </noscript>
