--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_LoginPartial.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
         <div class="small-btm-margin">
             <a id="signout-link" href="@Url.RouteUrl(RecruitmentRouteNames.SignOut)"><i class="fa fa-sign-out"></i>Sign out</a>
         </div>
-        @if (User.IsInRole(SFA.Apprenticeships.Web.Recruit.Constants.Roles.VerifiedEmail))
+        @if (User.IsInRole(SFA.Apprenticeships.Domain.Entities.Roles.VerifiedEmail))
         {
             <div>
                 <a class="account-link" id="applicationsLink" href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome)">Home</a>
