Remove pagination from search location results. Add scrollable list.

--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
@@ -181,3 +181,12 @@ table#vacancies-table {
         }
     }
 }
+
+.location-search-results{
+    padding: 0;
+    vertical-align: middle;
+}
+
+.add-location-link{
+    margin-top: 8px;
+}
